--- a/makingClient/index.html
+++ b/makingClient/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>School</title>
+	<title>User Website</title>
 	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
 <body>
